# django_rest_and_graphql_study

./: .gitignore  manage.py  pyproject.toml
django_rest_and_graphql_study/: asgi.py  settings.py  urls.py  wsgi.py
rest_api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rest_api/migrations/: 0001_initial.py
